--- a/_posts/pdf-analysis/pdf-analysis.html
+++ b/_posts/pdf-analysis/pdf-analysis.html
@@ -112,7 +112,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","categories","author","slug","date","output"]}},"value":[{"type":"character","attributes":{},"value":["Analysis of PDF Articles"]},{"type":"character","attributes":{},"value":["Text as Data Project-Article Sentiment Research\n"]},{"type":"character","attributes":{},"value":["text as data","NYT text analysis project"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url","affiliation","affiliation_url"]}},"value":[{"type":"character","attributes":{},"value":["Kristina Becvar"]},{"type":"character","attributes":{},"value":["https://kbec19.github.io/NYT-Analysis/"]},{"type":"character","attributes":{},"value":["UMass DACSS Program (My Academic Blog Link)"]},{"type":"character","attributes":{},"value":["https://kristinabecvar.com"]}]}]},{"type":"character","attributes":{},"value":["pdf-analysis"]},{"type":"character","attributes":{},"value":["04/17/2022"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["toc","code_folding"]}},"value":[{"type":"logical","attributes":{},"value":[true]},{"type":"logical","attributes":{},"value":[true]}]}]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","categories","author","slug","date","output"]}},"value":[{"type":"character","attributes":{},"value":["Analysis of PDF Articles"]},{"type":"character","attributes":{},"value":["Text as Data Project-Article Sentiment Research\n"]},{"type":"character","attributes":{},"value":["text as data","NYT text analysis project","pdf analysis"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url","affiliation","affiliation_url"]}},"value":[{"type":"character","attributes":{},"value":["Kristina Becvar"]},{"type":"character","attributes":{},"value":["https://kbec19.github.io/NYT-Analysis/"]},{"type":"character","attributes":{},"value":["UMass DACSS Program (My Academic Blog Link)"]},{"type":"character","attributes":{},"value":["https://kristinabecvar.com"]}]}]},{"type":"character","attributes":{},"value":["pdf-analysis"]},{"type":"character","attributes":{},"value":["04/17/2022"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["toc","code_folding"]}},"value":[{"type":"logical","attributes":{},"value":[true]},{"type":"logical","attributes":{},"value":[true]}]}]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
@@ -2489,6 +2489,7 @@ distill-header .nav a {
 <div class="dt-tags">
 <div class="dt=tag">text as data</div>
 <div class="dt=tag">NYT text analysis project</div>
+<div class="dt=tag">pdf analysis</div>
 </div>
 <!--/radix_placeholder_categories-->
 <p><p>Text as Data Project-Article Sentiment Research</p></p>
